syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr;
import "nftmngr/schema_attribute.proto";
option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";

message AttributeOfSchema {
  string nftSchemaCode = 1;
  repeated SchemaAttribute schemaAttributes = 2;
}
